# course-recommender

./: README.md  app.py  main.py  pyproject.toml  recommendation_model.pkl  recommendation_service.py
static/css/: style.css
static/js/: main.js
templates/: index.html
