[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
]
[tool.poetry]
name = "course-recommender"
version = "0.1.0"
description = "A course recommendation system"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "recommendation_service"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
# Add other dependencies here

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
# Add other dev dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"