[tool.poetry]
name = "course-recommender"
version = "0.1.0"
description = "A course recommendation system"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
gunicorn = "^23.0.0"
numpy = "^1.24.0"
pandas = "^1.5.0"
scikit-learn = "^1.2.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
statsmodels = "^0.14.0"
# Add other dependencies here

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
# Add other dev dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"